# file-arch

./: .gitignore  CMakeLists.txt  LICENSE
src/: main.cpp
src/commands/: ShowTreeCommand.cpp  ShowTreeCommand.h
src/core/: FolderPicker.cpp  FolderPicker.h  TreeBuilder.cpp  TreeBuilder.h
src/utils/: IgnoreRules.cpp  IgnoreRules.h
